--- a/app/templates/game/gamefield.html
+++ b/app/templates/game/gamefield.html
@@ -43,11 +43,12 @@
 </div>
 <div class="container">
 <div class="row">
-    <div class="col" style="background-color: red" onmousemove="coordinate(event)">
+    <div style="background-color: red" onmousemove="coordinate(event)">
         <canvas id="canvas" style="background-color: blue"></canvas>
         <script src="{% static 'js/test.js'%}"></script>
     </div>
 </div>
+    <script></script>
     <div class="row">
         <input id="X"/>
         <input id="Y"/>
