--- a/app/templates/game/canvasgamefield.html
+++ b/app/templates/game/canvasgamefield.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block body %}
 
-<canvas id="gamefield" style="background-color: blue" onresize="fieldDrawer()" onmousedown="clickCheker(event)"></canvas>
-<script src="{% static 'js/canvasJS/main.js'%}"></script>
+<canvas id="gamefield" style="background-color: blue"></canvas>
+<script type="module" src="{% static 'js/canvasJS/main.js'%}"></script>
 <input id="X"/>
 <input id="Y"/>
 {% endblock body %}
