--- a/app/templates/game/canvasgamefield.html
+++ b/app/templates/game/canvasgamefield.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body %}
 
-<canvas id="gamefield" style="background-color: blue"></canvas>
+<canvas id="gamefield"></canvas>
 <script type="module" src="{% static 'js/canvasJS/main.js'%}"></script>
 <input id="X"/>
 <input id="Y"/>
